# uvdemo

./: README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/uvdemo/: __init__.py  library.py
src/uvtest/: __init__.py  library.py
tests/: __init__.py  test_init.py  test_library.py
