[project]
name = "uvdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christian Staudt", email = "mail@clstaudt.me" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "halo>=0.0.31",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
